--- a/index.html
+++ b/index.html
@@ -131,6 +131,25 @@
                 </p>
             </div>
         </section>
+        <!-- Super Client Section -->
+        <section class="my-24 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-20 flex flex-col lg:flex-row gap-112">
+          <!-- clients Info -->
+              <div class="space-y-5">
+                <h2 class="text-5xl font-extrabold text-white">Meet Our Super<br> Clients</h2>
+                <p  class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <button class="btn btn-primary bg-white text-[#FF8938]">Show All</button>
+              </div>
+              <!-- clients review -->
+              <div class="relative p-10 rounded-lg bg-white">
+                <img class="absolute -left-5 -top-5 border-4 rounded-full border-white bg-white " src="./images/client.png" alt="">
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                <p class="font-medium">Businessman</p>
+                <div class="flex justify-end">
+                  <img src="./images/circles.png" alt="">
+                </div>
+              </div>
+        </section>
     </main>
     <footer>
 
